@@ -27,34 +27,33 @@
 
 package com.mewna.catnip.rest.handler;
 
-import com.google.common.collect.ImmutableMap;
+import com.grack.nanojson.JsonArray;
+import com.grack.nanojson.JsonObject;
 import com.mewna.catnip.entity.channel.GuildChannel;
 import com.mewna.catnip.entity.guild.*;
 import com.mewna.catnip.entity.guild.Guild.GuildEditFields;
 import com.mewna.catnip.entity.guild.audit.ActionType;
 import com.mewna.catnip.entity.guild.audit.AuditLogEntry;
 import com.mewna.catnip.entity.misc.CreatedInvite;
-import com.mewna.catnip.entity.misc.VoiceRegion;
+import com.mewna.catnip.entity.voice.VoiceRegion;
 import com.mewna.catnip.internal.CatnipImpl;
 import com.mewna.catnip.rest.ResponsePayload;
 import com.mewna.catnip.rest.Routes;
 import com.mewna.catnip.rest.guild.*;
 import com.mewna.catnip.rest.requester.Requester.OutboundRequest;
 import com.mewna.catnip.util.QueryStringBuilder;
-import com.mewna.catnip.util.Utils;
 import com.mewna.catnip.util.pagination.AuditLogPaginator;
 import com.mewna.catnip.util.pagination.MemberPaginator;
-import io.vertx.core.json.JsonArray;
-import io.vertx.core.json.JsonObject;
+import io.reactivex.rxjava3.core.Completable;
+import io.reactivex.rxjava3.core.Observable;
+import io.reactivex.rxjava3.core.Single;
 
 import javax.annotation.CheckReturnValue;
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import java.util.Collections;
-import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
 
 import static com.mewna.catnip.util.JsonUtil.mapObjectContents;
 
@@ -70,305 +69,316 @@ public class RestGuild extends RestHandler {
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> modifyGuildMember(@Nonnull final String guildId, @Nonnull final String memberId,
-                                                   @Nonnull final MemberData data, @Nullable final String reason) {
-        return catnip().requester()
+    public Completable modifyGuildMember(@Nonnull final String guildId, @Nonnull final String memberId,
+                                         @Nonnull final MemberData data, @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_MEMBER.withMajorParam(guildId),
-                        ImmutableMap.of("user.id", memberId), data.toJson(), reason))
-                .thenApply(__ -> null);
+                        Map.of("user", memberId), data.toJson(), reason)));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> modifyGuildMember(@Nonnull final String guildId, @Nonnull final String memberId,
-                                                   @Nonnull final MemberData data) {
+    public Completable modifyGuildMember(@Nonnull final String guildId, @Nonnull final String memberId,
+                                         @Nonnull final MemberData data) {
         return modifyGuildMember(guildId, memberId, data, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> modifyGuildChannelPositions(@Nonnull final PositionUpdater updater,
-                                                             @Nullable final String reason) {
+    public Completable modifyGuildChannelPositions(@Nonnull final PositionUpdater updater,
+                                                   @Nullable final String reason) {
         final JsonArray array = new JsonArray();
         updater.entries()
                 .stream()
-                .map(x -> new JsonObject().put("id", x.getKey()).put("position", x.getValue()))
+                .map(x -> JsonObject.builder().value("id", x.getKey()).value("position", x.getValue()).done())
                 .forEach(array::add);
-        return catnip().requester()
+        return Completable.fromObservable(catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_CHANNEL_POSITIONS.withMajorParam(updater.guildId()),
-                        ImmutableMap.of(), array, reason))
-                .thenApply(__ -> null);
+                        Map.of(), array, reason)));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> modifyGuildChannelPositions(@Nonnull final PositionUpdater updater) {
+    public Completable modifyGuildChannelPositions(@Nonnull final PositionUpdater updater) {
         return modifyGuildChannelPositions(updater, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> modifyGuildRolePositions(@Nonnull final PositionUpdater updater,
-                                                          @Nullable final String reason) {
+    public Completable modifyGuildRolePositions(@Nonnull final PositionUpdater updater,
+                                                @Nullable final String reason) {
         final JsonArray array = new JsonArray();
         updater.entries()
                 .stream()
-                .map(x -> new JsonObject().put("id", x.getKey()).put("position", x.getValue()))
+                .map(x -> JsonObject.builder().value("id", x.getKey()).value("position", x.getValue()).done())
                 .forEach(array::add);
-        return catnip().requester()
+        return Completable.fromObservable(catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_ROLE_POSITIONS.withMajorParam(updater.guildId()),
-                        ImmutableMap.of(), array, reason))
-                .thenApply(__ -> null);
+                        Map.of(), array, reason)));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> modifyGuildRolePositions(@Nonnull final PositionUpdater updater) {
+    public Completable modifyGuildRolePositions(@Nonnull final PositionUpdater updater) {
         return modifyGuildRolePositions(updater, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    @SuppressWarnings("TypeMayBeWeakened")
-    public CompletionStage<GuildChannel> createGuildChannel(@Nonnull final String guildId, @Nonnull final ChannelData data,
-                                                            @Nullable final String reason) {
-        return createGuildChannelRaw(guildId, data, reason).thenApply(entityBuilder()::createGuildChannel);
+    public Single<GuildChannel> createGuildChannel(@Nonnull final String guildId, @Nonnull final ChannelData data,
+                                                   @Nullable final String reason) {
+        return Single.fromObservable(createGuildChannelRaw(guildId, data, reason)
+                .map(entityBuilder()::createGuildChannel));
     }
     
     @Nonnull
     @CheckReturnValue
-    @SuppressWarnings("TypeMayBeWeakened")
-    public CompletionStage<GuildChannel> createGuildChannel(@Nonnull final String guildId, @Nonnull final ChannelData data) {
+    public Single<GuildChannel> createGuildChannel(@Nonnull final String guildId, @Nonnull final ChannelData data) {
         return createGuildChannel(guildId, data, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> createGuildChannelRaw(@Nonnull final String guildId, @Nonnull final ChannelData data,
-                                                             @Nullable final String reason) {
+    public Observable<JsonObject> createGuildChannelRaw(@Nonnull final String guildId, @Nonnull final ChannelData data,
+                                                        @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.CREATE_GUILD_CHANNEL.withMajorParam(guildId),
-                        ImmutableMap.of(), data.toJson(), reason))
-                .thenApply(ResponsePayload::object);
+                        Map.of(), data.toJson(), reason))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<GuildEmbed> getGuildEmbed(@Nonnull final String guildId) {
-        return getGuildEmbedRaw(guildId).thenApply(entityBuilder()::createGuildEmbed);
+    public Single<GuildEmbed> getGuildEmbed(@Nonnull final String guildId) {
+        return Single.fromObservable(getGuildEmbedRaw(guildId).map(entityBuilder()::createGuildEmbed));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> getGuildEmbedRaw(@Nonnull final String guildId) {
+    public Observable<JsonObject> getGuildEmbedRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD_EMBED.withMajorParam(guildId),
-                        ImmutableMap.of()))
-                .thenApply(ResponsePayload::object);
+                        Map.of()))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<GuildEmbed> modifyGuildEmbed(@Nonnull final String guildId, @Nullable final String channelId,
-                                                        final boolean enabled, @Nullable final String reason) {
-        return modifyGuildEmbedRaw(guildId, channelId, enabled, reason).thenApply(entityBuilder()::createGuildEmbed);
+    public Single<GuildEmbed> modifyGuildEmbed(@Nonnull final String guildId, @Nullable final String channelId,
+                                               final boolean enabled, @Nullable final String reason) {
+        return Single.fromObservable(modifyGuildEmbedRaw(guildId, channelId, enabled, reason)
+                .map(entityBuilder()::createGuildEmbed));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<GuildEmbed> modifyGuildEmbed(@Nonnull final String guildId, @Nullable final String channelId,
-                                                        final boolean enabled) {
+    public Single<GuildEmbed> modifyGuildEmbed(@Nonnull final String guildId, @Nullable final String channelId,
+                                               final boolean enabled) {
         return modifyGuildEmbed(guildId, channelId, enabled, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> modifyGuildEmbedRaw(@Nonnull final String guildId, @Nullable final String channelId,
-                                                           final boolean enabled, @Nullable final String reason) {
+    public Observable<JsonObject> modifyGuildEmbedRaw(@Nonnull final String guildId, @Nullable final String channelId,
+                                                      final boolean enabled, @Nullable final String reason) {
         return catnip().requester()
-                .queue(new OutboundRequest(Routes.MODIFY_GUILD_EMBED.withMajorParam(guildId),
-                        ImmutableMap.of(), new JsonObject().put("channel_id", channelId).put("enabled", enabled), reason))
-                .thenApply(ResponsePayload::object);
+                .queue(new OutboundRequest(Routes.MODIFY_GUILD_EMBED.withMajorParam(guildId), Map.of(),
+                        JsonObject.builder().value("channel_id", channelId).value("enabled", enabled).done(), reason))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    @SuppressWarnings("TypeMayBeWeakened")
-    public CompletionStage<Role> createGuildRole(@Nonnull final String guildId, @Nonnull final RoleData roleData,
-                                                 @Nullable final String reason) {
-        return createGuildRoleRaw(guildId, roleData, reason).thenApply(obj -> entityBuilder().createRole(guildId, obj));
+    public Single<CreatedInvite> getGuildVanityURL(@Nonnull final String guildId) {
+        return Single.fromObservable(getGuildVanityURLRaw(guildId))
+                .map(entityBuilder()::createCreatedInvite);
+    }
+    
+    public Observable<JsonObject> getGuildVanityURLRaw(@Nonnull final String guildId) {
+        return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_VANITY_URL.withMajorParam(guildId), Map.of()))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    @SuppressWarnings("TypeMayBeWeakened")
-    public CompletionStage<Role> createGuildRole(@Nonnull final String guildId, @Nonnull final RoleData roleData) {
+    public Single<Role> createGuildRole(@Nonnull final String guildId, @Nonnull final RoleData roleData,
+                                        @Nullable final String reason) {
+        return Single.fromObservable(createGuildRoleRaw(guildId, roleData, reason)
+                .map(obj -> entityBuilder().createRole(guildId, obj)));
+    }
+    
+    @Nonnull
+    @CheckReturnValue
+    public Single<Role> createGuildRole(@Nonnull final String guildId, @Nonnull final RoleData roleData) {
         return createGuildRole(guildId, roleData, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> createGuildRoleRaw(@Nonnull final String guildId, @Nonnull final RoleData roleData,
-                                                          @Nullable final String reason) {
+    public Observable<JsonObject> createGuildRoleRaw(@Nonnull final String guildId, @Nonnull final RoleData roleData,
+                                                     @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.CREATE_GUILD_ROLE.withMajorParam(guildId),
-                        ImmutableMap.of(), roleData.toJson(), reason))
-                .thenApply(ResponsePayload::object);
+                        Map.of(), roleData.toJson(), reason))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    @SuppressWarnings("TypeMayBeWeakened")
-    public CompletionStage<Role> modifyGuildRole(@Nonnull final String guildId, @Nonnull final String roleId,
-                                                 @Nonnull final RoleData roleData, @Nullable final String reason) {
-        return modifyGuildRoleRaw(guildId, roleId, roleData, reason)
-                .thenApply(obj -> entityBuilder().createRole(guildId, obj));
+    public Single<Role> modifyGuildRole(@Nonnull final String guildId, @Nonnull final String roleId,
+                                        @Nonnull final RoleData roleData, @Nullable final String reason) {
+        return Single.fromObservable(modifyGuildRoleRaw(guildId, roleId, roleData, reason)
+                .map(obj -> entityBuilder().createRole(guildId, obj)));
     }
     
-    public CompletionStage<Role> modifyGuildRole(@Nonnull final String guildId, @Nonnull final String roleId,
-                                                 @Nonnull final RoleData roleData) {
+    @Nonnull
+    @CheckReturnValue
+    public Single<Role> modifyGuildRole(@Nonnull final String guildId, @Nonnull final String roleId,
+                                        @Nonnull final RoleData roleData) {
         return modifyGuildRole(guildId, roleId, roleData, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> modifyGuildRoleRaw(@Nonnull final String guildId, @Nonnull final String roleId,
-                                                          @Nonnull final RoleData roleData, @Nullable final String reason) {
+    public Observable<JsonObject> modifyGuildRoleRaw(@Nonnull final String guildId, @Nonnull final String roleId,
+                                                     @Nonnull final RoleData roleData, @Nullable final String reason) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.MODIFY_GUILD_ROLE.withMajorParam(guildId),
-                        ImmutableMap.of("role.id", roleId), roleData.toJson(), reason))
-                .thenApply(ResponsePayload::object);
+                        Map.of("role", roleId), roleData.toJson(), reason))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> deleteGuildRole(@Nonnull final String guildId, @Nonnull final String roleId,
-                                                 @Nullable final String reason) {
-        return catnip().requester()
+    public Completable deleteGuildRole(@Nonnull final String guildId, @Nonnull final String roleId,
+                                       @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester()
                 .queue(new OutboundRequest(Routes.DELETE_GUILD_ROLE.withMajorParam(guildId),
-                        ImmutableMap.of("role.id", roleId)).reason(reason))
-                .thenApply(__ -> null);
+                        Map.of("role", roleId)).reason(reason).emptyBody(true)));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Void> deleteGuildRole(@Nonnull final String guildId, @Nonnull final String roleId) {
+    public Completable deleteGuildRole(@Nonnull final String guildId, @Nonnull final String roleId) {
         return deleteGuildRole(guildId, roleId, null);
     }
     
-    
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<Role>> getGuildRoles(@Nonnull final String guildId) {
+    public Observable<Role> getGuildRoles(@Nonnull final String guildId) {
         return getGuildRolesRaw(guildId)
-                .thenApply(mapObjectContents(e -> entityBuilder().createRole(guildId, e)))
-                .thenApply(Collections::unmodifiableList);
+                .map(f -> mapObjectContents(e -> entityBuilder().createRole(guildId, e)).apply(f))
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> getGuildRolesRaw(@Nonnull final String guildId) {
+    public Observable<JsonArray> getGuildRolesRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD_ROLES.withMajorParam(guildId),
-                        ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                        Map.of()))
+                .map(ResponsePayload::array);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Guild> getGuild(@Nonnull final String guildId) {
-        return getGuildRaw(guildId).thenApply(entityBuilder()::createGuild);
+    public Single<Guild> getGuild(@Nonnull final String guildId) {
+        return Single.fromObservable(getGuildRaw(guildId).map(entityBuilder()::createGuild));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> getGuildRaw(@Nonnull final String guildId) {
+    public Observable<JsonObject> getGuildRaw(@Nonnull final String guildId) {
         return catnip().requester()
-                .queue(new OutboundRequest(Routes.GET_GUILD.withMajorParam(guildId),
-                        ImmutableMap.of()))
-                .thenApply(ResponsePayload::object);
+                .queue(new OutboundRequest(Routes.GET_GUILD.withMajorParam(guildId)
+                        .withQueryString(new QueryStringBuilder().append("with_counts", "true").build()),
+                        Map.of()))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Guild> createGuild(@Nonnull final GuildData guild) {
-        return createGuildRaw(guild).thenApply(entityBuilder()::createGuild);
+    public Single<Guild> createGuild(@Nonnull final GuildData guild) {
+        return Single.fromObservable(createGuildRaw(guild).map(entityBuilder()::createGuild));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> createGuildRaw(@Nonnull final GuildData guild) {
+    public Observable<JsonObject> createGuildRaw(@Nonnull final GuildData guild) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.CREATE_GUILD,
-                        ImmutableMap.of(), guild.toJson()))
-                .thenApply(ResponsePayload::object);
+                        Map.of(), guild.toJson()))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
-    public CompletionStage<Void> deleteGuild(@Nonnull final String guildId) {
-        return catnip().requester()
+    public Completable deleteGuild(@Nonnull final String guildId) {
+        return Completable.fromObservable(catnip().requester()
                 .queue(new OutboundRequest(Routes.DELETE_GUILD.withMajorParam(guildId),
-                        ImmutableMap.of()))
-                .thenApply(__ -> null);
+                        Map.of()).emptyBody(true)));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<GuildChannel>> getGuildChannels(@Nonnull final String guildId) {
+    public Observable<GuildChannel> getGuildChannels(@Nonnull final String guildId) {
         return getGuildChannelsRaw(guildId)
-                .thenApply(mapObjectContents(entityBuilder()::createChannel))
+                .map(e -> mapObjectContents(entityBuilder()::createChannel).apply(e))
+                .flatMapIterable(e -> e)
                 // All elements are guaranteed to be instances of GuildChannel,
                 // so it's safe to do a cast, plus this way we avoid copying the list.
-                .thenApply(RestHandler::uncheckedCast);
+                .map(RestHandler::uncheckedCast);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> getGuildChannelsRaw(@Nonnull final String guildId) {
+    public Observable<JsonArray> getGuildChannelsRaw(@Nonnull final String guildId) {
         return catnip().requester()
                 .queue(new OutboundRequest(Routes.GET_GUILD_CHANNELS.withMajorParam(guildId),
-                        ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                        Map.of()))
+                .map(ResponsePayload::array);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<CreatedInvite>> getGuildInvites(@Nonnull final String guildId) {
-        return getGuildInvitesRaw(guildId).thenApply(mapObjectContents(entityBuilder()::createCreatedInvite));
+    public Observable<CreatedInvite> getGuildInvites(@Nonnull final String guildId) {
+        return getGuildInvitesRaw(guildId)
+                .map(e -> mapObjectContents(entityBuilder()::createCreatedInvite).apply(e))
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> getGuildInvitesRaw(@Nonnull final String guildId) {
+    public Observable<JsonArray> getGuildInvitesRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_INVITES.withMajorParam(guildId),
-                ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                Map.of()))
+                .map(ResponsePayload::array);
     }
     
     @Nonnull
-    public CompletionStage<Guild> modifyGuild(@Nonnull final String guildId, @Nonnull final GuildEditFields fields, @Nullable final String reason) {
-        return modifyGuildRaw(guildId, fields, reason).thenApply(entityBuilder()::createGuild);
+    public Single<Guild> modifyGuild(@Nonnull final String guildId, @Nonnull final GuildEditFields fields, @Nullable final String reason) {
+        return Single.fromObservable(modifyGuildRaw(guildId, fields, reason).map(entityBuilder()::createGuild));
     }
     
-    public CompletionStage<Guild> modifyGuild(@Nonnull final String guildId, @Nonnull final GuildEditFields fields) {
+    public Single<Guild> modifyGuild(@Nonnull final String guildId, @Nonnull final GuildEditFields fields) {
         return modifyGuild(guildId, fields, null);
     }
     
     @Nonnull
-    public CompletionStage<JsonObject> modifyGuildRaw(@Nonnull final String guildId, @Nonnull final GuildEditFields fields,
-                                                      @Nullable final String reason) {
+    public Observable<JsonObject> modifyGuildRaw(@Nonnull final String guildId, @Nonnull final GuildEditFields fields,
+                                                 @Nullable final String reason) {
         return catnip().requester().queue(new OutboundRequest(Routes.MODIFY_GUILD.withMajorParam(guildId),
-                ImmutableMap.of(), fields.payload(), reason))
-                .thenApply(ResponsePayload::object);
+                Map.of(), fields.payload(), reason))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
     public MemberPaginator listGuildMembers(@Nonnull final String guildId) {
+        // TODO: Handle intents here (GUILD_MEMBERS)
         return new MemberPaginator(entityBuilder(), guildId) {
             @Nonnull
             @Override
-            protected CompletionStage<JsonArray> fetchNext(@Nonnull final RequestState<Member> state, @Nullable final String lastId, final int requestSize) {
+            protected Observable<JsonArray> fetchNext(@Nonnull final RequestState<Member> state, @Nullable final String lastId, final int requestSize) {
                 return listGuildMembersRaw(guildId, state.entitiesToFetch(), lastId);
             }
         };
@@ -376,16 +386,17 @@ public class RestGuild extends RestHandler {
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<Member>> listGuildMembers(@Nonnull final String guildId, @Nonnegative final int limit,
-                                                          @Nullable final String after) {
+    public Observable<Member> listGuildMembers(@Nonnull final String guildId, @Nonnegative final int limit,
+                                               @Nullable final String after) {
         return listGuildMembersRaw(guildId, limit, after)
-                .thenApply(mapObjectContents(o -> entityBuilder().createMember(guildId, o)));
+                .map(e -> mapObjectContents(o -> entityBuilder().createMember(guildId, o)).apply(e))
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> listGuildMembersRaw(@Nonnull final String guildId, @Nonnegative final int limit,
-                                                          @Nullable final String after) {
+    public Observable<JsonArray> listGuildMembersRaw(@Nonnull final String guildId, @Nonnegative final int limit,
+                                                     @Nullable final String after) {
         
         final QueryStringBuilder builder = new QueryStringBuilder();
         
@@ -399,185 +410,193 @@ public class RestGuild extends RestHandler {
         final String query = builder.build();
         
         return catnip().requester().queue(new OutboundRequest(Routes.LIST_GUILD_MEMBERS.withMajorParam(guildId).withQueryString(query),
-                ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                Map.of()))
+                .map(ResponsePayload::array);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<GuildBan>> getGuildBans(@Nonnull final String guildId) {
-        return getGuildBansRaw(guildId).thenApply(mapObjectContents(entityBuilder()::createGuildBan));
+    public Observable<GuildBan> getGuildBans(@Nonnull final String guildId) {
+        return getGuildBansRaw(guildId)
+                .map(e -> mapObjectContents(entityBuilder()::createGuildBan).apply(e))
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> getGuildBansRaw(@Nonnull final String guildId) {
+    public Observable<JsonArray> getGuildBansRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_BANS.withMajorParam(guildId),
-                ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                Map.of()))
+                .map(ResponsePayload::array);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<GuildBan> getGuildBan(@Nonnull final String guildId, @Nonnull final String userId) {
-        return getGuildBanRaw(guildId, userId).thenApply(entityBuilder()::createGuildBan);
+    public Single<GuildBan> getGuildBan(@Nonnull final String guildId, @Nonnull final String userId) {
+        return Single.fromObservable(getGuildBanRaw(guildId, userId).map(entityBuilder()::createGuildBan));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> getGuildBanRaw(@Nonnull final String guildId, @Nonnull final String userId) {
+    public Observable<JsonObject> getGuildBanRaw(@Nonnull final String guildId, @Nonnull final String userId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_BAN.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)))
-                .thenApply(ResponsePayload::object);
+                Map.of("user", userId)))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
-    public CompletionStage<Void> createGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
-                                                @Nullable final String reason,
-                                                @Nonnegative final int deleteMessageDays) {
+    public Completable createGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
+                                      @Nullable final String reason,
+                                      @Nonnegative final int deleteMessageDays) {
         if(deleteMessageDays > 7) {
-            CompletableFuture<Void> future = new CompletableFuture<>();
+            final CompletableFuture<Void> future = new CompletableFuture<>();
             future.completeExceptionally(new IllegalArgumentException("deleteMessageDays can't be above 7"));
-            return future;
+            return Completable.fromFuture(future);
         }
         
         final QueryStringBuilder builder = new QueryStringBuilder();
-        builder.append("reason", Utils.encodeUTF8(reason == null ? "" : reason));
+        builder.append("reason", reason == null ? "" : reason);
         builder.append("delete-message-days", String.valueOf(deleteMessageDays));
         final String query = builder.build();
-        return catnip().requester().queue(new OutboundRequest(Routes.CREATE_GUILD_BAN.withMajorParam(guildId).withQueryString(query),
-                ImmutableMap.of("user.id", userId)).reason(reason))
-                .thenApply(e -> null);
+        return Completable.fromObservable(catnip().requester()
+                .queue(new OutboundRequest(Routes.CREATE_GUILD_BAN.withMajorParam(guildId).withQueryString(query),
+                        Map.of("user", userId)).reason(reason).emptyBody(true)));
     }
     
     @Nonnull
-    public CompletionStage<Void> createGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
-                                                @Nonnegative final int deleteMessageDays) {
+    public Completable createGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
+                                      @Nonnegative final int deleteMessageDays) {
         return createGuildBan(guildId, userId, null, deleteMessageDays);
     }
     
     @Nonnull
-    public CompletionStage<Void> removeGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
-                                                @Nullable final String reason) {
-        return catnip().requester().queue(new OutboundRequest(Routes.REMOVE_GUILD_BAN.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)).reason(reason))
-                .thenApply(e -> null);
+    public Completable removeGuildBan(@Nonnull final String guildId, @Nonnull final String userId,
+                                      @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester()
+                .queue(new OutboundRequest(Routes.REMOVE_GUILD_BAN.withMajorParam(guildId),
+                        Map.of("user", userId)).reason(reason).emptyBody(true)));
     }
     
     @Nonnull
-    public CompletionStage<Void> removeGuildBan(@Nonnull final String guildId, @Nonnull final String userId) {
+    public Completable removeGuildBan(@Nonnull final String guildId, @Nonnull final String userId) {
         return removeGuildBan(guildId, userId, null);
     }
     
     @Nonnull
-    public CompletionStage<String> modifyCurrentUsersNick(@Nonnull final String guildId, @Nullable final String nick,
-                                                          @Nullable final String reason) {
-        return catnip().requester().queue(new OutboundRequest(Routes.MODIFY_CURRENT_USERS_NICK.withQueryString(guildId),
-                ImmutableMap.of(), new JsonObject().put("nick", nick), reason))
-                .thenApply(ResponsePayload::string);
+    public Single<String> modifyCurrentUsersNick(@Nonnull final String guildId, @Nullable final String nick,
+                                                 @Nullable final String reason) {
+        return Single.fromObservable(catnip().requester()
+                .queue(new OutboundRequest(Routes.MODIFY_CURRENT_USERS_NICK.withQueryString(guildId),
+                        Map.of(), JsonObject.builder().value("nick", nick).done(), reason))
+                .map(ResponsePayload::string));
     }
     
     @Nonnull
-    public CompletionStage<String> modifyCurrentUsersNick(@Nonnull final String guildId, @Nullable final String nick) {
+    public Single<String> modifyCurrentUsersNick(@Nonnull final String guildId, @Nullable final String nick) {
         return modifyCurrentUsersNick(guildId, nick, null);
     }
     
     @Nonnull
-    public CompletionStage<Void> removeGuildMember(@Nonnull final String guildId, @Nonnull final String userId,
-                                                   @Nullable final String reason) {
-        return catnip().requester().queue(new OutboundRequest(Routes.REMOVE_GUILD_MEMBER.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)).reason(reason))
-                .thenApply(e -> null);
+    public Completable removeGuildMember(@Nonnull final String guildId, @Nonnull final String userId,
+                                         @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester()
+                .queue(new OutboundRequest(Routes.REMOVE_GUILD_MEMBER.withMajorParam(guildId),
+                        Map.of("user", userId)).reason(reason).emptyBody(true)));
     }
     
     @Nonnull
-    public CompletionStage<Void> removeGuildMember(@Nonnull final String guildId, @Nonnull final String userId) {
+    public Completable removeGuildMember(@Nonnull final String guildId, @Nonnull final String userId) {
         return removeGuildMember(guildId, userId, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Member> getGuildMember(@Nonnull final String guildId, @Nonnull final String userId) {
-        return getGuildMemberRaw(guildId, userId).thenApply(e -> entityBuilder().createMember(guildId, e));
+    public Single<Member> getGuildMember(@Nonnull final String guildId, @Nonnull final String userId) {
+        return Single.fromObservable(getGuildMemberRaw(guildId, userId)
+                .map(e -> entityBuilder().createMember(guildId, e)));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> getGuildMemberRaw(@Nonnull final String guildId, @Nonnull final String userId) {
+    public Observable<JsonObject> getGuildMemberRaw(@Nonnull final String guildId, @Nonnull final String userId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_MEMBER.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId)))
-                .thenApply(ResponsePayload::object);
+                Map.of("user", userId)))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
-    public CompletionStage<Void> removeGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
-                                                       @Nonnull final String roleId, @Nullable final String reason) {
-        return catnip().requester().queue(new OutboundRequest(Routes.REMOVE_GUILD_MEMBER_ROLE.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId, "role.id", roleId)).reason(reason))
-                .thenApply(e -> null);
+    public Completable removeGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
+                                             @Nonnull final String roleId, @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester()
+                .queue(new OutboundRequest(Routes.REMOVE_GUILD_MEMBER_ROLE.withMajorParam(guildId),
+                        Map.of("user", userId, "role", roleId)).reason(reason).emptyBody(true)));
     }
+    
     @Nonnull
-    public CompletionStage<Void> removeGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
-                                                       @Nonnull final String roleId) {
+    public Completable removeGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
+                                             @Nonnull final String roleId) {
         return removeGuildMemberRole(guildId, userId, roleId, null);
     }
     
     @Nonnull
-    public CompletionStage<Void> addGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
-                                                    @Nonnull final String roleId, @Nullable final String reason) {
-        return catnip().requester().queue(new OutboundRequest(Routes.ADD_GUILD_MEMBER_ROLE.withMajorParam(guildId),
-                ImmutableMap.of("user.id", userId, "role.id", roleId)).reason(reason))
-                .thenApply(e -> null);
+    public Completable addGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
+                                          @Nonnull final String roleId, @Nullable final String reason) {
+        return Completable.fromObservable(catnip().requester()
+                .queue(new OutboundRequest(Routes.ADD_GUILD_MEMBER_ROLE.withMajorParam(guildId),
+                        Map.of("user", userId, "role", roleId)).reason(reason).emptyBody(true)));
     }
+    
     @Nonnull
-    public CompletionStage<Void> addGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
-                                                    @Nonnull final String roleId) {
+    public Completable addGuildMemberRole(@Nonnull final String guildId, @Nonnull final String userId,
+                                          @Nonnull final String roleId) {
         return addGuildMemberRole(guildId, userId, roleId, null);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Integer> getGuildPruneCount(@Nonnull final String guildId, @Nonnegative final int days) {
-        return getGuildPruneCountRaw(guildId, days).thenApply(e -> e.getInteger("pruned"));
+    public Single<Integer> getGuildPruneCount(@Nonnull final String guildId, @Nonnegative final int days) {
+        return Single.fromObservable(getGuildPruneCountRaw(guildId, days).map(e -> e.getInt("pruned")));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> getGuildPruneCountRaw(@Nonnull final String guildId, @Nonnegative final int days) {
+    public Observable<JsonObject> getGuildPruneCountRaw(@Nonnull final String guildId, @Nonnegative final int days) {
         final String query = new QueryStringBuilder().append("days", Integer.toString(days)).build();
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_PRUNE_COUNT
-                .withMajorParam(guildId).withQueryString(query), ImmutableMap.of()))
-                .thenApply(ResponsePayload::object);
+                .withMajorParam(guildId).withQueryString(query), Map.of()))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<Integer> beginGuildPrune(@Nonnull final String guildId, @Nonnegative final int days) {
-        return beginGuildPruneRaw(guildId, days).thenApply(e -> e.getInteger("pruned"));
+    public Single<Integer> beginGuildPrune(@Nonnull final String guildId, @Nonnegative final int days) {
+        return Single.fromObservable(beginGuildPruneRaw(guildId, days).map(e -> e.getInt("pruned")));
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> beginGuildPruneRaw(@Nonnull final String guildId, @Nonnegative final int days) {
+    public Observable<JsonObject> beginGuildPruneRaw(@Nonnull final String guildId, @Nonnegative final int days) {
         final String query = new QueryStringBuilder().append("days", Integer.toString(days)).build();
         
         return catnip().requester().queue(new OutboundRequest(Routes.BEGIN_GUILD_PRUNE
-                .withMajorParam(guildId).withQueryString(query), ImmutableMap.of()))
-                .thenApply(ResponsePayload::object);
+                .withMajorParam(guildId).withQueryString(query), Map.of()))
+                .map(ResponsePayload::object);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<VoiceRegion>> getGuildVoiceRegions(@Nonnull final String guildId) {
-        return getGuildVoiceRegionsRaw(guildId).thenApply(mapObjectContents(entityBuilder()::createVoiceRegion));
+    public Observable<VoiceRegion> getGuildVoiceRegions(@Nonnull final String guildId) {
+        return getGuildVoiceRegionsRaw(guildId)
+                .map(e -> mapObjectContents(entityBuilder()::createVoiceRegion).apply(e))
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> getGuildVoiceRegionsRaw(@Nonnull final String guildId) {
+    public Observable<JsonArray> getGuildVoiceRegionsRaw(@Nonnull final String guildId) {
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_VOICE_REGIONS.withQueryString(guildId),
-                ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                Map.of()))
+                .map(ResponsePayload::array);
     }
     
     public AuditLogPaginator getGuildAuditLog(@Nonnull final String guildId) {
@@ -585,8 +604,8 @@ public class RestGuild extends RestHandler {
             @Nonnull
             @CheckReturnValue
             @Override
-            protected CompletionStage<JsonObject> fetchNext(@Nonnull final RequestState<AuditLogEntry> state, @Nullable final String lastId,
-                                                            @Nonnegative final int requestSize) {
+            protected Observable<JsonObject> fetchNext(@Nonnull final RequestState<AuditLogEntry> state, @Nullable final String lastId,
+                                                       @Nonnegative final int requestSize) {
                 return getGuildAuditLogRaw(guildId, state.extra("user"), lastId, state.extra("type"), requestSize);
             }
         };
@@ -594,18 +613,19 @@ public class RestGuild extends RestHandler {
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<AuditLogEntry>> getGuildAuditLog(@Nonnull final String guildId, @Nullable final String userId,
-                                                                 @Nullable final String beforeEntryId, @Nullable final ActionType type,
-                                                                 @Nonnegative final int limit) {
+    public Observable<AuditLogEntry> getGuildAuditLog(@Nonnull final String guildId, @Nullable final String userId,
+                                                      @Nullable final String beforeEntryId, @Nullable final ActionType type,
+                                                      @Nonnegative final int limit) {
         return getGuildAuditLogRaw(guildId, userId, beforeEntryId, type, limit)
-                .thenApply(entityBuilder()::createAuditLog);
+                .map(entityBuilder()::createAuditLog)
+                .flatMapIterable(e -> e);
     }
     
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonObject> getGuildAuditLogRaw(@Nonnull final String guildId, @Nullable final String userId,
-                                                           @Nullable final String beforeEntryId, @Nullable final ActionType type,
-                                                           @Nonnegative final int limit) {
+    public Observable<JsonObject> getGuildAuditLogRaw(@Nonnull final String guildId, @Nullable final String userId,
+                                                      @Nullable final String beforeEntryId, @Nullable final ActionType type,
+                                                      @Nonnegative final int limit) {
         
         final QueryStringBuilder builder = new QueryStringBuilder();
         
@@ -622,12 +642,12 @@ public class RestGuild extends RestHandler {
         }
         
         if(type != null) {
-            builder.append("action_type", type.toString());
+            builder.append("action_type", Integer.toString(type.getValue()));
         }
         
         final String query = builder.build();
         return catnip().requester().queue(new OutboundRequest(Routes.GET_GUILD_AUDIT_LOG.withMajorParam(guildId).withQueryString(query),
-                ImmutableMap.of()))
-                .thenApply(ResponsePayload::object);
+                Map.of()))
+                .map(ResponsePayload::object);
     }
 }
