@@ -27,18 +27,17 @@
 
 package com.mewna.catnip.rest.handler;
 
-import com.google.common.collect.ImmutableMap;
-import com.mewna.catnip.entity.misc.VoiceRegion;
+import com.grack.nanojson.JsonArray;
+import com.mewna.catnip.entity.voice.VoiceRegion;
 import com.mewna.catnip.internal.CatnipImpl;
 import com.mewna.catnip.rest.ResponsePayload;
 import com.mewna.catnip.rest.Routes;
 import com.mewna.catnip.rest.requester.Requester.OutboundRequest;
-import io.vertx.core.json.JsonArray;
+import io.reactivex.rxjava3.core.Observable;
 
 import javax.annotation.CheckReturnValue;
 import javax.annotation.Nonnull;
-import java.util.List;
-import java.util.concurrent.CompletionStage;
+import java.util.Map;
 
 import static com.mewna.catnip.util.JsonUtil.mapObjectContents;
 
@@ -47,18 +46,20 @@ public class RestVoice extends RestHandler {
     public RestVoice(final CatnipImpl catnip) {
         super(catnip);
     }
-
+    
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<List<VoiceRegion>> listVoiceRegions() {
-        return listVoiceRegionsRaw().thenApply(mapObjectContents(entityBuilder()::createVoiceRegion));
+    public Observable<VoiceRegion> listVoiceRegions() {
+        return listVoiceRegionsRaw()
+                .map(e -> mapObjectContents(entityBuilder()::createVoiceRegion).apply(e))
+                .flatMapIterable(e -> e);
     }
-
+    
     @Nonnull
     @CheckReturnValue
-    public CompletionStage<JsonArray> listVoiceRegionsRaw() {
+    public Observable<JsonArray> listVoiceRegionsRaw() {
         return catnip().requester().queue(new OutboundRequest(Routes.LIST_VOICE_REGIONS,
-                ImmutableMap.of()))
-                .thenApply(ResponsePayload::array);
+                Map.of()))
+                .map(ResponsePayload::array);
     }
 }
